force-app/main/default/objects/Enrollment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <inlineHelpText>Derived from the learner&apos;s Contact Account. Works for Business and Person Accounts.</inlineHelpText>
    <label>Account</label>
    <type>Text</type>
</CustomField>