force-app/main/default/objects/Enrollment__c/fields/Certificate_URL__c.field-meta.xml
<CustomField>
    <fullName>Certificate_URL__c</fullName>
    <inlineHelpText>Link to generated certificate upon completion.</inlineHelpText>
    <label>Certificate URL</label>
    <type>Url</type>
</CustomField>