force-app/main/default/objects/Enrollment__c/fields/Progress_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Progress_Percentage__c</fullName>
    <inlineHelpText>Calculated progress through the course (0-100%).</inlineHelpText>
    <label>Progress Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>