force-app/main/default/objects/Enrollment__c/fields/Quiz_Passed__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Passed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates whether the learner has passed the course quiz</inlineHelpText>
    <label>Quiz Passed</label>
    <type>Checkbox</type>
</CustomField>