force-app/main/default/objects/Enrollment__c/fields/Quiz_Score__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Score__c</fullName>
    <inlineHelpText>Last quiz score achieved (0-100)</inlineHelpText>
    <label>Quiz Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>