force-app/main/default/objects/Enrollment__c/fields/Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Unique_Key__c</fullName>
    <description>Unique constraint key to prevent duplicate enrollments for the same Contact + Course combination. Workflow rule sets value to Contact__c + &apos;_&apos; + Course__c</description>
    <externalId>true</externalId>
    <label>Unique Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>